--- a/index.html
+++ b/index.html
@@ -11,17 +11,131 @@
         <div id="taskbar">
             <div id="start-button">Start</div>
             <div id="taskbar-items"></div>
-            <div id="system-tray"></div>
+            <div id="system-tray">
+                <div id="clock"></div>
+            </div>
         </div>
         <div id="icons">
-            <!-- Add desktop icons here -->
-            <div class="icon">
+            <!-- About Me Icon -->
+            <div class="icon" id="me-icon">
                 <img src="icons/folder.png" alt="Folder">
-                <span>My Documents</span>
+                <span>About Me</span>
             </div>
-            <!-- Add more icons as needed -->
+            <!-- Portfolio Icon -->
+            <div class="icon" id="portfolio-icon">
+                <img src="icons/folder.png" alt="Folder">
+                <span>Portfolio</span>
+            </div>
+            <!-- Resume Icon -->
+            <div class="icon" id="resume-icon">
+                <img src="icons/folder.png" alt="Folder">
+                <span>Resume</span>
+            </div>
+            <!-- Contact Icon -->
+            <div class="icon" id="contact-icon">
+                <img src="icons/folder.png" alt="Folder">
+                <span>Contact</span>
+            </div>
+            <!-- Blog Icon -->
+            <div class="icon" id="blog-icon">
+                <img src="icons/folder.png" alt="Folder">
+                <span>Blog</span>
+            </div>
+        </div>
+        
+        <!-- Start Menu -->
+        <div id="start-menu">
+            <button class="start-menu-item" id="start-me">About Me</button>
+            <button class="start-menu-item" id="start-portfolio">Portfolio</button>
+            <button class="start-menu-item" id="start-resume">Resume</button>
+            <button class="start-menu-item" id="start-contact">Contact</button>
+            <button class="start-menu-item" id="start-blog">Blog</button>
         </div>
     </div>
+
+    <!-- About Me Window -->
+    <div class="window me-window" id="me-window">
+        <div class="window-header">
+            <span>About Me</span>
+            <button class="minimize-button">_</button>
+            <button class="maximize-button">□</button>
+            <button class="close-button">X</button>
+        </div>
+        <div class="me-window-content">
+            <h2>About Me</h2>
+            <!---<img src="me.jpg" alt="Your Photo" class="profile-photo">-->
+            <p>Hi, I'm Eddie. </p>
+        </div>
+    </div>
+
+    <!-- Portfolio Window -->
+    <div class="window" id="portfolio-window">
+        <div class="window-header">
+            <span>Portfolio</span>
+            <button class="minimize-button">_</button>
+            <button class="maximize-button">□</button>
+            <button class="close-button">X</button>
+        </div>
+        <div class="window-content">
+            <h2>Portfolio</h2>
+            <p>Here are some of my projects:</p>
+            <!-- Add project details here -->
+        </div>
+    </div>
+
+    <!-- Resume Window -->
+    <div class="window" id="resume-window">
+        <div class="window-header">
+            <span>Resume</span>
+            <button class="minimize-button">_</button>
+            <button class="maximize-button">□</button>
+            <button class="close-button">X</button>
+        </div>
+        <div class="window-content">
+            <h2>Resume</h2>
+            <p>Work Experience:</p>
+            <!-- Add experience details here -->
+            <p>Education:</p>
+            <!-- Add education details here -->
+        </div>
+    </div>
+
+    <!-- Contact Window -->
+    <div class="window" id="contact-window">
+        <div class="window-header">
+            <span>Contact</span>
+            <button class="minimize-button">_</button>
+            <button class="maximize-button">□</button>
+            <button class="close-button">X</button>
+        </div>
+        <div class="window-content">
+            <h2>Contact</h2>
+            <form id="contact-form">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email">
+                <label for="message">Message:</label>
+                <textarea id="message" name="message"></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Blog Window -->
+    <div class="window" id="blog-window">
+        <div class="window-header">
+            <span>Blog</span>
+            <button class="minimize-button">_</button>
+            <button class="maximize-button">□</button>
+            <button class="close-button">X</button>
+        </div>
+        <div class="window-content">
+            <h2>Blog</h2>
+            <!-- Add blog posts here -->
+        </div>
+    </div>
+
     <script src="scripts.js"></script>
 </body>
 </html>
