got rid of contact and blog

--- a/index.html
+++ b/index.html
@@ -28,18 +28,12 @@
             </div>
             <!-- Resume Icon -->
             <div class="icon" id="resume-icon">
-                <img src="icons/folder.png" alt="Folder">
+                <img src="icons/cv.png" alt="Folder">
                 <span>Resume</span>
             </div>
-            <!-- Contact Icon -->
-            <div class="icon" id="contact-icon">
-                <img src="icons/folder.png" alt="Folder">
-                <span>Contact</span>
-            </div>
-            <!-- Blog Icon -->
-            <div class="icon" id="blog-icon">
-                <img src="icons/folder.png" alt="Folder">
-                <span>Blog</span>
+            <div class="icon" id="email-icon">
+                <img src="icons/email.png" alt="Email Icon">
+                <span>Email</span>
             </div>
         </div>
 
@@ -48,8 +42,7 @@
             <button class="start-menu-item" id="start-about-me">About Me</button>
             <button class="start-menu-item" id="start-portfolio">Portfolio</button>
             <button class="start-menu-item" id="start-resume">Resume</button>
-            <button class="start-menu-item" id="start-contact">Contact</button>
-            <button class="start-menu-item" id="start-blog">Blog</button>
+            
         </div>
     </div>
 
@@ -100,44 +93,6 @@
         </div>
     </div>
 
-    <!-- Contact Window -->
-<!-- Contact Window -->
-    <div class="window" id="contact-window">
-        <div class="window-header">
-            <span>Contact</span>
-            <div class="window-control"></div>
-            <button class="minimize-button">_</button>
-            <button class="maximize-button">□</button>
-            <button class="close-button">X</button>
-        </div>
-        <div class="window-content">
-            <h2>Contact</h2>
-            <form id="contact-form">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email">
-                <label for="message">Message:</label>
-                <textarea id="message" name="message"></textarea>
-                <button type="submit">Send</button>
-            </form>
-        </div>
-    </div>
-
-    <!-- Blog Window -->
-    <div class="window" id="blog-window">
-        <div class="window-header">
-            <span>Blog</span>
-            <div class="window-control"></div>
-            <button class="minimize-button">_</button>
-            <button class="maximize-button">□</button>
-            <button class="close-button">X</button>
-        </div>
-        <div class="window-content">
-            <h2>Blog</h2>
-            <!-- Add blog posts here -->
-        </div>
-    </div>
 
     <script src="scripts.js"></script>
 </body>
