--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <div id="desktop">
+
+        <div id="world" class="world" data-world>
+            <div class="score" data-score>0</div>
+            <div class="start-screen" data-start-screen>Press Any Key To Start</div>
+            <img src="dino_game/imgs/birdnobg-run-1.png" class="dino" data-dino alt="dino">
+        </div>
+
         <div id="taskbar">
             <div id="start-button">Start</div>
             <div id="taskbar-items"></div>
@@ -57,7 +64,7 @@
         </div>
         <div class="about-me-window-content">
             <h2>About Me</h2>
-            <p>Hi, I'm Eddie. </p>
+            <p>Hi, I'm Eddie. I'm a Computer Science student at the University of Sheffield, currently heading into third year. </p>
         </div>
     </div>
 
@@ -94,6 +101,6 @@
     </div>
 
 
-    <script src="scripts.js"></script>
+    <script src="scripts.js" type="module"></script>
 </body>
 </html>
