--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <div id="desktop">
 
         <div id="world" class="world" data-world>
-            <div class="score" data-score>0</div>
-            <div class="start-screen" data-start-screen>Press Any Key To Start</div>
-            <img src="dino_game/imgs/birdnobg-run-1.png" class="dino" data-dino alt="dino">
+            <canvas id="gameCanvas"></canvas>
         </div>
 
         <div id="taskbar">
@@ -64,7 +62,11 @@
         </div>
         <div class="about-me-window-content">
             <h2>About Me</h2>
-            <p>Hi, I'm Eddie. I'm a Computer Science student at the University of Sheffield, currently heading into third year. </p>
+           
+           
+            <p>Hi! I'm Eddie. I'm a Computer Science student at Sheffield University, currently in third year. My hobbies include playing and recording music, I spend most of free time playing guitar/piano/trombone. When I'm not playing, I'd consider myself a reliable full stack developer with experience coding in Java, Python, Ruby and Javascript to name a few. Send me an email if you'd like to get in touch, my socials are all on here.</p>
+            <p>I hope you enjoy my website!</p>
+            <p>-Eddie</p>
         </div>
     </div>
 
